[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llama-index-tools-enigmagent"
version = "0.1.0"
description = "LlamaIndex tools integration for EnigmAgent — resolve {{PLACEHOLDER}} secrets at the LLM boundary so models never see real API keys"
authors = [{name="Francisco Angulo de Lafuente", email="agnuxo1@gmail.com"}]
license = {text="MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["llama-index","llamaindex","enigmagent","mcp","secrets","vault","credentials","security","agent","tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
]
dependencies = [
  "llama-index-core>=0.11",
  "httpx>=0.24",
  "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/Agnuxo1/llama-index-tools-enigmagent"
"Bug Tracker" = "https://github.com/Agnuxo1/llama-index-tools-enigmagent/issues"
"Main Project" = "https://github.com/Agnuxo1/EnigmAgent"

[tool.hatch.build.targets.wheel]
packages = ["llama_index/tools/enigmagent"]
include = ["llama_index/tools/enigmagent/**/*.py"]

[tool.hatch.build.targets.wheel.sources]
"llama_index/tools/enigmagent" = "llama_index/tools/enigmagent"

[tool.hatch.build.targets.sdist]
include = [
  "llama_index/tools/enigmagent/**/*.py",
  "tests/**/*.py",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
